scripts/nullaway/original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8.txt
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/OptimizationVisitor.java:15: error: [NullAway] @NonNull field oldString not initialized
  String oldString;
         ^
    (see http://t.uber.com/nullaway )
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:14: error: [NullAway] @NonNull field array not initialized
  private byte[]               array;
                               ^
    (see http://t.uber.com/nullaway )
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/InterpreterVisitor.java:16: error: [NullAway] @NonNull field procedures not initialized
  private Map<Byte, Procedure> procedures;
                               ^
    (see http://t.uber.com/nullaway )
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/visitors/AnimationVisitor.java:134: error: [NullAway] initializer method does not guarantee @NonNull fields array (line 27), procedures (line 29) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public AnimationVisitor(String windowName)
         ^
    (see http://t.uber.com/nullaway )
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/FilePrinter.java:9: error: [NullAway] @NonNull static field fileStream not initialized
  static FileWriter     fileStream;
                        ^
    (see http://t.uber.com/nullaway )
../original/urlaf1bd0a8c7_RoboCafaz_RummyJ_tgz-pJ8-rummyj_BFJ8/src/rummyj/FilePrinter.java:10: error: [NullAway] @NonNull static field outBuffer not initialized
  static BufferedWriter outBuffer;
                        ^
    (see http://t.uber.com/nullaway )
6 errors
